--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ redis = "^5.0.3"
 flower = "^2.0.1"
 psutil = "^5.9.8"
 requests = "^2.31.0"
+channels = "^4.1.0"
+daphne = "^4.1.2"
+channels-redis = "^4.2.0"
 
 
 [build-system]
